--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-native": "^0.63.4",
+    "react-native-web": "^0.15.0",
     "react-scripts": "4.0.3",
+    "roslib": "^1.1.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
