--- a/package.json
+++ b/package.json
@@ -4,13 +4,12 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.3",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-native": "^0.63.4",
-    "react-native-web": "^0.15.0",
     "react-scripts": "4.0.3",
     "roslib": "^1.1.0",
     "web-vitals": "^1.0.1"
