--- a/.github/workflows/shisenapp_ci.yml
+++ b/.github/workflows/shisenapp_ci.yml
@@ -20,9 +20,9 @@ jobs:
           node-version: '12.x'
       - name: Build and test
         run: |
-          yarn install
-          yarn run build
-          yarn test
+          npm install
+          npm run build
+          npm test
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@4.1.0
         with:
