--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,8 +4,8 @@
     "es2021": true
   },
   "extends": [
-    "plugin:react/recommended",
-    "airbnb"
+    "airbnb",
+    "plugin:react/recommended"
   ],
   "parserOptions": {
     "ecmaFeatures": {
