--- a/.github/workflows/shisen_app_ci.yml
+++ b/.github/workflows/shisen_app_ci.yml
@@ -1,11 +1,9 @@
-name: ShisenApp CI
+name: Shisen App CI
 on:
   push:
-    branches: 
-      - master 
+    branches: [ master ]
   pull_request:
-    branches: 
-      - master 
+    branches: [ master ]
 
 jobs:
   build-test-deploy:
@@ -13,13 +11,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v2.3.4
       - name: Build and test
         run: |
-          npm install
-          npm run build
+          npm install -g yarn
+          yarn install
+          yarn lint
+          yarn build
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@4.1.0
         with:
           branch: gh-pages
-          folder: build 
+          folder: build
