--- a/.github/workflows/shisen_app_ci.yml
+++ b/.github/workflows/shisen_app_ci.yml
@@ -14,10 +14,9 @@ jobs:
         uses: actions/checkout@v2.3.4
       - name: Build and test
         run: |
-          npm install -g yarn
-          yarn install
-          yarn lint
-          yarn build
+          npm install
+          npm run lint
+          npm run build
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@4.1.0
         with:
