--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "shisen-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://ichiro-its.github.io/shisen-app/",
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/lab": "^4.0.0-alpha.57",
@@ -15,6 +16,8 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
