--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,5 +20,11 @@
     "react"
   ],
   "rules": {
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto"
+      }
+    ]
   }
 }
