--- a/package.json
+++ b/package.json
@@ -17,13 +17,11 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.3",
-    "@material-ui/lab": "^4.0.0-alpha.57",
     "kumo-app": "git+https://github.com/ichiro-its/kumo-app.git",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-scripts": "4.0.3",
-    "roslib": "^1.1.0"
+    "react-dom": "^17.0.2",
+    "react-scripts": "4.0.3"
   },
   "devDependencies": {
     "eslint": "^7.21.0",
