--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -1,21 +1,17 @@
-name: Shisen App CI
+name: Build and Deploy
 on:
   push:
-    branches: [ master ]
-  pull_request:
     branches: [ master ]
 
 jobs:
   build-test-deploy:
-    name: Build, test, and deploy the project
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2.3.4
-      - name: Build and test
+      - name: Install and build
         run: |
           npm install
-          npm run lint
           npm run build
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@4.1.0
