--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "uuid": "^3.4.0"
   },
   "devDependencies": {
     "eslint": "^7.21.0",
