--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,6 +5,7 @@
   },
   "extends": [
     "airbnb",
+    "eslint:recommended",
     "plugin:prettier/recommended",
     "plugin:react/recommended"
   ],
