--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "license": "MIT",
   "repository": "git@github.com:ichiro-its/shisen-app.git",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "vite",
+    "build": "vite build",
+    "serve": "vite preview",
     "test": "run-s test-lint",
     "test-lint": "eslint --ext .js,.jsx ."
   },
@@ -17,17 +18,24 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
     "uuid": "^3.4.0"
   },
   "devDependencies": {
-    "eslint": "^7.21.0",
+    "@vitejs/plugin-react-refresh": "^1.3.1",
+    "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-import": "^2.24.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
+    "lib-flexible": "^0.3.2",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "sass": "^1.38.0",
+    "vite": "^2.4.4",
+    "vite-plugin-env-compatible": "^1.1.0",
+    "vite-plugin-eslint": "^1.3.0"
   },
   "private": true,
   "browserslist": [
