--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.2",
+    "vite": "^2.4.4",
+    "@vitejs/plugin-react-refresh": "^1.3.1",
+    "vite-plugin-eslint": "^1.3.0",
     "uuid": "^3.4.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-react-refresh": "^1.3.1",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.1.0",
@@ -33,9 +35,7 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1",
     "sass": "^1.38.0",
-    "vite": "^2.4.4",
-    "vite-plugin-env-compatible": "^1.1.0",
-    "vite-plugin-eslint": "^1.3.0"
+    "vite-plugin-env-compatible": "^1.1.0"
   },
   "private": true,
   "browserslist": [
